--- a/app/globals.css
+++ b/app/globals.css
@@ -109,3 +109,9 @@ body,
 .btn {
   @apply inline-block bg-[#700070] rounded text-white px-3 py-1;
 }
+
+.floating-verif-icon {
+  margin-bottom: -2.5em;
+
+  @apply px-10 z-10 text-left w-1/2;
+}
